fixed header spacing

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,3 +3,10 @@
   right: 0px;
   left: 0px;
 }
+
+.navbar .nav-item {
+  display: inline-block;
+  padding: 26px 0;
+  width: 33.3%;
+  text-align: center;
+}
