--- a/src/components/Jumbotron/Jumbotron.css
+++ b/src/components/Jumbotron/Jumbotron.css
@@ -1,3 +1,4 @@
 .jumbotron {
   margin-bottom: 0px;
+  padding-top: 150px;
 }
